# common-dockerfile

./: .gitlab-ci.yml  .start.sh  .update.sh  LICENSE  README.md  Taskfile.yml  common.ansible-molecule.json  common.app.json  common.ci-pipeline.json  common.software.json  package-lock.json  package.ansible-molecule.json.handlebars  package.app.json.handlebars  package.ci-pipeline.json.handlebars  package.json  package.software.json.handlebars  pnpm-lock.yaml  pyproject.toml  test.sh  update.sh  variables.ansible-molecule.json  variables.app.json  variables.ci-pipeline.json  variables.json  variables.software.json
.common/: package.hbs.json
.common-ansible-molecule/: package.hbs.json
.common-app/: package.hbs.json
.common-ci-pipeline/: package.hbs.json
.common-software/: package.hbs.json
.config/: eslintcache  hbs.js  package-lock.json  start.sh
common/: Taskfile.yml  package.json  pyproject.toml
deprecated/: slim-test.sh
docs/: blueprint-readme-ci-slim.md  blueprint-readme-ci.md  common.json  variables.json
files/: .gitignore  .gitlab-ci.yml  LICENSE  package.json
files-*/: .gitlab-ci.yml
files-ansible-molecule/: .start.sh  Taskfile.yml  package.json.handlebars  requirements.txt
files-app/: .gitlab-ci.yml  .start.sh  Taskfile.yml  package.json.handlebars
files-ci-pipeline/: .start.sh  Taskfile.yml  package.json.handlebars  requirements.txt
files-software/: .gitlab-ci.yml  .start.sh  Taskfile.yml  package.json.handlebars
local/: package-lock.json
project/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
project-ansible-molecule/: package.hbs.json  package.json.liquid
project-app/: package.hbs.json
project-ci-pipeline/: package.hbs.json  package.json.liquid
project-codeclimate/: engine.json.liquid  package.json.liquid
project-docker-compose/: package.json.liquid
project-software/: package.hbs.json
taskfiles-ansible-molecule/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-fix.yml  Taskfile-lint.yml
taskfiles-app/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-fix.yml  Taskfile-lint.yml  Taskfile-test.yml
taskfiles-ci-pipeline/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-fix.yml  Taskfile-lint.yml  Taskfile-test.yml
taskfiles-software/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-fix.yml  (+2 more)
(+979 files in other folders)
