[tool.poetry]
name = "common-dockerfile"
version = "0.0.1"
description = "Common files used in Dockerfile projects including global common files, documentation partials, and shared configurations"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/common/dockerfile"
keywords = ["common", "docker", "dockerfile", "files", "megabytelabs", "npm", "package", "professormanhattan", "shared"]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
yamllint = "^1.26.3"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/common/dockerfile/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/common-dockerfile"
"GitLab" = "https://gitlab.com/megabyte-labs/common/dockerfile"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
